Fixed visual bug on safari

--- a/src/App.css
+++ b/src/App.css
@@ -90,15 +90,12 @@
 
 /* Shadow Drop */
 .shadow-drop {
-    filter: drop-shadow(0.125rem 0.125rem 0.0625rem rgba(0, 0, 0, 0.7))
-        drop-shadow(0rem -0.0625rem 0.1875rem rgba(0, 0, 0, 0.5))
-
-        drop-shadow(0rem -0.0625rem 0.5rem rgba(0, 0, 0, 0.4));
-    -webkit-filter: drop-shadow(0.125rem 0.125rem 0.0625rem rgba(0, 0, 0, 0.7))
-        drop-shadow(0rem -0.0625rem 0.1875rem rgba(0, 0, 0, 0.5))
-
-
-        drop-shadow(0rem -0.0625rem 0.5rem rgba(0, 0, 0, 0.4));
+    -webkit-backdrop-filter: blur(3px) brightness(75%);
+    backdrop-filter: blur(3px) brightness(75%);
+    box-shadow: 
+        0 2px 4px rgba(0, 0, 0, 0.7),
+        0 -1px 3px rgba(0, 0, 0, 0.5),
+        0 -1px 8px rgba(0, 0, 0, 0.4);
 }
 
 .shadow-drop-sm {
@@ -178,11 +175,13 @@
 @keyframes numberChange {
     0% {
         opacity: 0;
-        transform: translateY(-20px) rotate(0deg);
+        transform: translate3d(0, -20px, 0);
+        -webkit-transform: translate3d(0, -20px, 0);
     }
     100% {
         opacity: 1;
-        transform: translateY(0px) rotate(0deg);
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
     }
 }
 
